src/objects/Automated_Chatter_Post__mdt.object
<CustomObject>
    <fields>
        <fullName>ADCVD_Objects__c</fullName>
        <label>ADCVD Objects</label>
        <referenceTo>ADCVD_Objects__mdt</referenceTo>
        <relationshipLabel>Automated Chatter Posts</relationshipLabel>
        <relationshipName>Automated_Chatter_Posts</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Feed_Item_Message__c</fullName>
        <inlineHelpText>To Mention a Staffing Assignment User use @ and their Staffing Role
The following HTML tags can be used to for rich text: &lt;b&gt;, &lt;i&gt;, &lt;u&gt;, &lt;s&gt;, &lt;ul&gt;, &lt;ol&gt;, &lt;li&gt;, &lt;p&gt;
Use &lt;/p&gt; from line breaks</inlineHelpText>
        <label>Feed Item Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Posting_Condition__c</fullName>
        <label>Posting Condition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alignment</fullName>
                    <default>true</default>
                    <label>Alignment</label>
                </value>
                <value>
                    <fullName>Extension</fullName>
                </value>
                <value>
                    <fullName>Litigation Change</fullName>
                </value>
                <value>
                    <fullName>Order FR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Automated Chatter Post</label>
    <pluralLabel>Automated Chatter Posts</pluralLabel>
</CustomObject>